# qiosq

./: .beans.yml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  design.md  flake.nix  proposal.md  tasks.md
.beans/: qiosq-77q5--e5-site-open-hugo-preview.md  qiosq-8z4l--e2-quiqr-storage-layer.md  qiosq-9m0x--e3-quiqr-schema-navigation-model.md  qiosq-c0j2--release-management-script.md  qiosq-clob--e9-real-send-to-agent-interaction-continued-input.md  qiosq-cp3q--e4-tui-shell-wp51-chrome.md  qiosq-csrd--m2-real-usable-app.md  qiosq-eyzw--e10-show-the-active-pane-focus.md  qiosq-j5p7--e12-read-only-viewer-markdown-highlight-file-type.md  qiosq-kfku--e11-quiqr-schema-navigation-singles-collections.md  qiosq-me0f--e6-read-only-file-view-send-to-agent-bridge.md  qiosq-mer9--m1-two-pane-poc-against-quiqr-server.md  qiosq-r7gf--initconf-detect-or-ask-where-the-quiqr-storage-is.md  qiosq-rts9--rmux-daemon-not-available-in-nixci-sandbox.md  qiosq-s0ui--e7-agent-pane-render-e2e-proof.md  qiosq-uy04--next-milestone-real-usable-app.md  qiosq-yh2l--send-rmux-flake-pr-when-weve-found-it-stable.md  qiosq-zyu7--e7-vm-import-quiqr-server-module-from-mipmipnixpkg.md  quosq-77q5--e5-site-open-hugo-preview.md  quosq-8z4l--e2-quiqr-storage-layer.md  quosq-9m0x--e3-quiqr-schema-navigation-model.md  quosq-cp3q--e4-tui-shell-wp51-chrome.md  quosq-me0f--e6-read-only-file-view-send-to-agent-bridge.md  quosq-mer9--m1-two-pane-poc-against-quiqr-server.md  quosq-s0ui--e7-agent-pane-render-e2e-proof.md
.beans/archive/: qiosq-4ppz--e8-live-coding-agent-in-the-running-tui.md  qiosq-77q5--e5-site-open-hugo-preview.md  qiosq-8z4l--e2-quiqr-storage-layer.md  qiosq-9c44--anonymized-real-site-test-fixture-notnix.md  qiosq-9m0x--e3-quiqr-schema-navigation-model.md  qiosq-c0j2--release-management-script.md  qiosq-cp3q--e4-tui-shell-wp51-chrome.md  qiosq-me0f--e6-read-only-file-view-send-to-agent-bridge.md  qiosq-mer9--m1-two-pane-poc-against-quiqr-server.md  qiosq-r7gf--initconf-detect-or-ask-where-the-quiqr-storage-is.md  qiosq-rblj--qtui-storage-enumerate-real-quiqr-layout-sitesname.md  qiosq-s0ui--e7-agent-pane-render-e2e-proof.md  qiosq-sflc--e1-foundation-nix.md  qiosq-uy04--next-milestone-real-usable-app.md  qiosq-zyu7--e7-vm-import-quiqr-server-module-from-mipmipnixpkg.md  quosq-sflc--e1-foundation-nix.md
config/: quiqr-tui.example.toml
crates/qtui/: Cargo.toml
crates/qtui-agent/: Cargo.toml
crates/qtui-agent/src/: lib.rs  rmux.rs
crates/qtui-agent/tests/: bridge.rs
crates/qtui-config/: Cargo.toml
crates/qtui-config/src/: discover.rs  lib.rs
crates/qtui-config/tests/: example_config.rs
crates/qtui-model/: Cargo.toml
crates/qtui-model/src/: lib.rs
crates/qtui-model/tests/: golden.rs
crates/qtui-model/tests/fixtures/dir-include/quiqr/model/includes/singles/: 01-about.yaml  02-contact.yaml
crates/qtui-model/tests/fixtures/full/quiqr/model/: base.yaml
crates/qtui-model/tests/fixtures/full/quiqr/model/includes/: collections.yaml  menu.yaml  singles.yaml
crates/qtui-model/tests/fixtures/malformed/quiqr/model/includes/: collections.yaml  menu.yaml
crates/qtui-model/tests/fixtures/partial/quiqr/model/includes/: collections.yaml
crates/qtui-preview/: Cargo.toml
crates/qtui-preview/src/: lib.rs
crates/qtui-preview/tests/: preview.rs
crates/qtui-storage/: Cargo.toml
crates/qtui-storage/src/: lib.rs
crates/qtui-storage/tests/: real_site.rs
crates/qtui-storage/tests/fixtures/real-site/: README.md  config.toml
crates/qtui-storage/tests/fixtures/real-site/content/post/: about-example.md  example-article.md
crates/qtui-storage/tests/fixtures/real-site/quiqr/model/partials/: config.yaml
crates/qtui-storage/tests/fixtures/real-site/sites/examplesite/: config.json
crates/qtui-storage/tests/fixtures/real-site/sites/examplesite/main/: config.toml
crates/qtui-storage/tests/fixtures/real-site/sites/examplesite/main/content/: _index.md  about.md
crates/qtui-storage/tests/fixtures/real-site/sites/examplesite/main/content/post/: _index.md
crates/qtui-ui/: Cargo.toml
crates/qtui-ui/src/: lib.rs
crates/qtui-ui/tests/: shell.rs
crates/qtui/src/: host.rs  init.rs  interactive.rs  main.rs  script.rs
docs/: 00-project-brief.md  01-architecture.md  02-testing-strategy.md  03-glossary.md  epics-seed.md
openspec/changes/agent-pane-e2e/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-agent-bridge/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-hugo-preview/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-poc-foundation/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-quiqr-model/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-quiqr-storage/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-tui-shell/: README.md  tasks.md  (+2 more)
openspec/specs/agent-pane-render/: spec.md
openspec/specs/agent-trait/: spec.md
openspec/specs/completion-detection/: spec.md
openspec/specs/config-loading/: spec.md
openspec/specs/content-tree/: spec.md
openspec/specs/dual-navigation/: spec.md
openspec/specs/e2e-proof/: spec.md
openspec/specs/field-schemas/: spec.md
openspec/specs/function-key-legend/: spec.md
openspec/specs/host-event-loop/: spec.md
openspec/specs/init-config/: spec.md
openspec/specs/live-agent/: spec.md
openspec/specs/mode-state-machine/: spec.md
openspec/specs/navigation-model/: spec.md
openspec/specs/nix-foundation/: spec.md
openspec/specs/preview-lifecycle/: spec.md
openspec/specs/preview-port-selection/: spec.md
openspec/specs/preview-readiness/: spec.md
openspec/specs/readonly-file-view/: spec.md
openspec/specs/release-management/: spec.md
openspec/specs/schema-parsing/: spec.md
openspec/specs/send-intent/: spec.md
openspec/specs/site-enumeration/: spec.md
openspec/specs/storage-discovery/: spec.md
openspec/specs/two-pane-layout/: spec.md
openspec/specs/workspace-scaffold/: spec.md
scripts/: bootstrap.sh  release.sh
(+45 files in other folders)
