[workspace]
resolver = "2"
members = [
    "crates/qtui-config",
    "crates/qtui-storage",
    "crates/qtui-model",
    "crates/qtui-agent",
    "crates/qtui-preview",
    "crates/qtui-ui",
    "crates/qtui",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/quiqr/qiosq"
rust-version = "1.80"

# Shared dependency versions. Crates opt in via `dep = { workspace = true }`.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
tempfile = "3"
serde_yaml = "0.9"
ratatui = "0.30"
dirs = "6"
rmux-sdk = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
