[package]
name = "qtui-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Load and validate the quiqr-tui TOML configuration with clear per-field errors"

# Pure crate: must not depend on ratatui/rmux (see docs/01-architecture.md §2).
[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true } # parse Quiqr's instance_settings.json
dirs = { workspace = true }       # per-OS config dir + home dir

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
