[package]
name = "qtui-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Parse quiqr/model/base.yaml + includes/ into a read-only NavigationModel"

# Pure crate: must not depend on ratatui/rmux (see docs/01-architecture.md §2).
[dependencies]

[lints]
workspace = true
